fix text truncation

--- a/src/components/Sidebar/FileTree/Node/node.module.scss
+++ b/src/components/Sidebar/FileTree/Node/node.module.scss
@@ -61,12 +61,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     font-size: 13px;
-    display: flex;
-    align-items: center;
-    gap: 6px;
-
-    // padding-right: 10px;
-    // background-color: red;
+    min-width: 0;
   }
 
   .children {
